Compilador/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> program
Rule 1     program -> element_list
Rule 2     element_list -> element
Rule 3     element_list -> element element_list
Rule 4     element -> block
Rule 5     element -> function
Rule 6     block -> command
Rule 7     block -> command block
Rule 8     command -> list_vars ATRIB list_exps
Rule 9     command -> call_function
Rule 10    command -> rotulo
Rule 11    command -> BREAK
Rule 12    command -> DO block END
Rule 13    command -> struct_while
Rule 14    command -> struct_repeat
Rule 15    command -> if
Rule 16    command -> struct_for
Rule 17    command -> struct_for_in
Rule 18    command -> LOCAL list_vars ATRIB list_exps
Rule 19    command -> command_ret
Rule 20    command_ret -> RETURN SEMICOLON
Rule 21    command_ret -> RETURN list_exps
Rule 22    command_ret -> RETURN list_exps SEMICOLON
Rule 23    rotulo -> DUALCOLON NAME DUALCOLON
Rule 24    list_vars -> var
Rule 25    list_vars -> var COMMA list_vars
Rule 26    var -> NAME
Rule 27    var -> prefix_exp COLCH exp RCOLCH
Rule 28    exp -> prefix_exp args
Rule 29    prefix_exp -> NAME
Rule 30    prefix_exp -> LPAREN exp RPAREN
Rule 31    prefix_exp -> prefix_exp sufix_exp
Rule 32    sufix_exp -> DOT NAME
Rule 33    sufix_exp -> DOT call_function
Rule 34    sufix_exp -> COLCH exp RCOLCH
Rule 35    list_names -> NAME
Rule 36    list_names -> NAME COMMA list_names
Rule 37    list_exps -> exp COMMA list_exps
Rule 38    list_exps -> exp
Rule 39    exp -> NIL
Rule 40    exp -> FALSE
Rule 41    exp -> TRUE
Rule 42    exp -> NUMBER
Rule 43    exp -> STRING
Rule 44    exp -> VARARGS
Rule 45    exp -> def_function
Rule 46    exp -> prefix_exp
Rule 47    exp -> TAG exp
Rule 48    exp -> MINUS exp
Rule 49    exp -> NOT exp
Rule 50    exp -> exp PLUS exp
Rule 51    exp -> exp MINUS exp
Rule 52    exp -> exp TIMES exp
Rule 53    exp -> exp DIVIDE exp
Rule 54    exp -> exp EXPO exp
Rule 55    exp -> exp PERCENTUAL exp
Rule 56    exp -> exp CONCAT exp
Rule 57    exp -> exp LT exp
Rule 58    exp -> exp LTEQUALS exp
Rule 59    exp -> exp GT exp
Rule 60    exp -> exp GTEQUALS exp
Rule 61    exp -> exp EQUALS exp
Rule 62    exp -> exp DIF exp
Rule 63    exp -> exp AND exp
Rule 64    exp -> exp OR exp
Rule 65    call_function -> prefix_exp args
Rule 66    def_function -> function
Rule 67    args -> LPAREN list_exps RPAREN
Rule 68    body_function -> LPAREN RPAREN block END
Rule 69    body_function -> LPAREN list_pars RPAREN block END
Rule 70    list_pars -> list_names
Rule 71    list_pars -> list_names COMMA VARARGS
Rule 72    list_pars -> VARARGS
Rule 73    function -> FUNCTION name_function body_function
Rule 74    name_function -> NAME
Rule 75    if -> IF exp THEN block elseif_list else_opt END
Rule 76    elseif_list -> elseif_list ELSEIF exp THEN block
Rule 77    elseif_list -> empty
Rule 78    else_opt -> ELSE block
Rule 79    else_opt -> empty
Rule 80    empty -> <empty>
Rule 81    struct_while -> WHILE exp DO block END
Rule 82    struct_for -> FOR NAME ATRIB exp COMMA exp DO block END
Rule 83    struct_for -> FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
Rule 84    struct_for_in -> FOR list_names IN list_exps DO block END
Rule 85    struct_repeat -> REPEAT block UNTIL exp

Terminals, with rules where they appear

AND                  : 63
ATRIB                : 8 18 82 83
BREAK                : 11
COLCH                : 27 34
COLON                : 
COMMA                : 25 36 37 71 82 83 83
CONCAT               : 56
DIF                  : 62
DIVIDE               : 53
DO                   : 12 81 82 83 84
DOT                  : 32 33
DUALCOLON            : 23 23
ELSE                 : 78
ELSEIF               : 76
END                  : 12 68 69 75 81 82 83 84
EQUALS               : 61
EXPO                 : 54
FALSE                : 40
FOR                  : 82 83 84
FUNCTION             : 73
GT                   : 59
GTEQUALS             : 60
IF                   : 75
IN                   : 84
LOCAL                : 18
LPAREN               : 30 67 68 69
LT                   : 57
LTEQUALS             : 58
MINUS                : 48 51
NAME                 : 23 26 29 32 35 36 74 82 83
NIL                  : 39
NOT                  : 49
NUMBER               : 42
OR                   : 64
PERCENTUAL           : 55
PLUS                 : 50
RCOLCH               : 27 34
REPEAT               : 85
RETURN               : 20 21 22
RPAREN               : 30 67 68 69
SEMICOLON            : 20 22
STRING               : 43
TAG                  : 47
THEN                 : 75 76
TIMES                : 52
TRUE                 : 41
UNTIL                : 85
VARARGS              : 44 71 72
WHILE                : 81
error                : 

Nonterminals, with rules where they appear

args                 : 28 65
block                : 4 7 12 68 69 75 76 78 81 82 83 84 85
body_function        : 73
call_function        : 9 33
command              : 6 7
command_ret          : 19
def_function         : 45
element              : 2 3
element_list         : 1 3
else_opt             : 75
elseif_list          : 75 76
empty                : 77 79
exp                  : 27 30 34 37 38 47 48 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 75 76 81 82 82 83 83 83 85
function             : 5 66
if                   : 15
list_exps            : 8 18 21 22 37 67 84
list_names           : 36 70 71 84
list_pars            : 69
list_vars            : 8 18 25
name_function        : 73
prefix_exp           : 27 28 31 46 65
program              : 0
rotulo               : 10
struct_for           : 16
struct_for_in        : 17
struct_repeat        : 14
struct_while         : 13
sufix_exp            : 31
var                  : 24 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . element_list
    (2) element_list -> . element
    (3) element_list -> . element element_list
    (4) element -> . block
    (5) element -> . function
    (6) block -> . command
    (7) block -> . command block
    (73) function -> . FUNCTION name_function body_function
    (8) command -> . list_vars ATRIB list_exps
    (9) command -> . call_function
    (10) command -> . rotulo
    (11) command -> . BREAK
    (12) command -> . DO block END
    (13) command -> . struct_while
    (14) command -> . struct_repeat
    (15) command -> . if
    (16) command -> . struct_for
    (17) command -> . struct_for_in
    (18) command -> . LOCAL list_vars ATRIB list_exps
    (19) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (65) call_function -> . prefix_exp args
    (23) rotulo -> . DUALCOLON NAME DUALCOLON
    (81) struct_while -> . WHILE exp DO block END
    (85) struct_repeat -> . REPEAT block UNTIL exp
    (75) if -> . IF exp THEN block elseif_list else_opt END
    (82) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (83) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (84) struct_for_in -> . FOR list_names IN list_exps DO block END
    (20) command_ret -> . RETURN SEMICOLON
    (21) command_ret -> . RETURN list_exps
    (22) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp COLCH exp RCOLCH
    (29) prefix_exp -> . NAME
    (30) prefix_exp -> . LPAREN exp RPAREN
    (31) prefix_exp -> . prefix_exp sufix_exp

    FUNCTION        shift and go to state 7
    BREAK           shift and go to state 11
    DO              shift and go to state 12
    LOCAL           shift and go to state 18
    DUALCOLON       shift and go to state 22
    WHILE           shift and go to state 24
    REPEAT          shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    NAME            shift and go to state 23
    LPAREN          shift and go to state 29

    program                        shift and go to state 1
    element_list                   shift and go to state 2
    element                        shift and go to state 3
    block                          shift and go to state 4
    function                       shift and go to state 5
    command                        shift and go to state 6
    list_vars                      shift and go to state 8
    call_function                  shift and go to state 9
    rotulo                         shift and go to state 10
    struct_while                   shift and go to state 13
    struct_repeat                  shift and go to state 14
    if                             shift and go to state 15
    struct_for                     shift and go to state 16
    struct_for_in                  shift and go to state 17
    command_ret                    shift and go to state 19
    var                            shift and go to state 20
    prefix_exp                     shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> element_list .

    $end            reduce using rule 1 (program -> element_list .)


state 3

    (2) element_list -> element .
    (3) element_list -> element . element_list
    (2) element_list -> . element
    (3) element_list -> . element element_list
    (4) element -> . block
    (5) element -> . function
    (6) block -> . command
    (7) block -> . command block
    (73) function -> . FUNCTION name_function body_function
    (8) command -> . list_vars ATRIB list_exps
    (9) command -> . call_function
    (10) command -> . rotulo
    (11) command -> . BREAK
    (12) command -> . DO block END
    (13) command -> . struct_while
    (14) command -> . struct_repeat
    (15) command -> . if
    (16) command -> . struct_for
    (17) command -> . struct_for_in
    (18) command -> . LOCAL list_vars ATRIB list_exps
    (19) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (65) call_function -> . prefix_exp args
    (23) rotulo -> . DUALCOLON NAME DUALCOLON
    (81) struct_while -> . WHILE exp DO block END
    (85) struct_repeat -> . REPEAT block UNTIL exp
    (75) if -> . IF exp THEN block elseif_list else_opt END
    (82) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (83) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (84) struct_for_in -> . FOR list_names IN list_exps DO block END
    (20) command_ret -> . RETURN SEMICOLON
    (21) command_ret -> . RETURN list_exps
    (22) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp COLCH exp RCOLCH
    (29) prefix_exp -> . NAME
    (30) prefix_exp -> . LPAREN exp RPAREN
    (31) prefix_exp -> . prefix_exp sufix_exp

    $end            reduce using rule 2 (element_list -> element .)
    FUNCTION        shift and go to state 7
    BREAK           shift and go to state 11
    DO              shift and go to state 12
    LOCAL           shift and go to state 18
    DUALCOLON       shift and go to state 22
    WHILE           shift and go to state 24
    REPEAT          shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    NAME            shift and go to state 23
    LPAREN          shift and go to state 29

    element                        shift and go to state 3
    element_list                   shift and go to state 30
    block                          shift and go to state 4
    function                       shift and go to state 5
    command                        shift and go to state 6
    list_vars                      shift and go to state 8
    call_function                  shift and go to state 9
    rotulo                         shift and go to state 10
    struct_while                   shift and go to state 13
    struct_repeat                  shift and go to state 14
    if                             shift and go to state 15
    struct_for                     shift and go to state 16
    struct_for_in                  shift and go to state 17
    command_ret                    shift and go to state 19
    var                            shift and go to state 20
    prefix_exp                     shift and go to state 21

state 4

    (4) element -> block .

    FUNCTION        reduce using rule 4 (element -> block .)
    BREAK           reduce using rule 4 (element -> block .)
    DO              reduce using rule 4 (element -> block .)
    LOCAL           reduce using rule 4 (element -> block .)
    DUALCOLON       reduce using rule 4 (element -> block .)
    WHILE           reduce using rule 4 (element -> block .)
    REPEAT          reduce using rule 4 (element -> block .)
    IF              reduce using rule 4 (element -> block .)
    FOR             reduce using rule 4 (element -> block .)
    RETURN          reduce using rule 4 (element -> block .)
    NAME            reduce using rule 4 (element -> block .)
    LPAREN          reduce using rule 4 (element -> block .)
    $end            reduce using rule 4 (element -> block .)


state 5

    (5) element -> function .

    FUNCTION        reduce using rule 5 (element -> function .)
    BREAK           reduce using rule 5 (element -> function .)
    DO              reduce using rule 5 (element -> function .)
    LOCAL           reduce using rule 5 (element -> function .)
    DUALCOLON       reduce using rule 5 (element -> function .)
    WHILE           reduce using rule 5 (element -> function .)
    REPEAT          reduce using rule 5 (element -> function .)
    IF              reduce using rule 5 (element -> function .)
    FOR             reduce using rule 5 (element -> function .)
    RETURN          reduce using rule 5 (element -> function .)
    NAME            reduce using rule 5 (element -> function .)
    LPAREN          reduce using rule 5 (element -> function .)
    $end            reduce using rule 5 (element -> function .)


state 6

    (6) block -> command .
    (7) block -> command . block
    (6) block -> . command
    (7) block -> . command block
    (8) command -> . list_vars ATRIB list_exps
    (9) command -> . call_function
    (10) command -> . rotulo
    (11) command -> . BREAK
    (12) command -> . DO block END
    (13) command -> . struct_while
    (14) command -> . struct_repeat
    (15) command -> . if
    (16) command -> . struct_for
    (17) command -> . struct_for_in
    (18) command -> . LOCAL list_vars ATRIB list_exps
    (19) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (65) call_function -> . prefix_exp args
    (23) rotulo -> . DUALCOLON NAME DUALCOLON
    (81) struct_while -> . WHILE exp DO block END
    (85) struct_repeat -> . REPEAT block UNTIL exp
    (75) if -> . IF exp THEN block elseif_list else_opt END
    (82) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (83) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (84) struct_for_in -> . FOR list_names IN list_exps DO block END
    (20) command_ret -> . RETURN SEMICOLON
    (21) command_ret -> . RETURN list_exps
    (22) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp COLCH exp RCOLCH
    (29) prefix_exp -> . NAME
    (30) prefix_exp -> . LPAREN exp RPAREN
    (31) prefix_exp -> . prefix_exp sufix_exp

  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DUALCOLON resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    FUNCTION        reduce using rule 6 (block -> command .)
    $end            reduce using rule 6 (block -> command .)
    END             reduce using rule 6 (block -> command .)
    UNTIL           reduce using rule 6 (block -> command .)
    ELSEIF          reduce using rule 6 (block -> command .)
    ELSE            reduce using rule 6 (block -> command .)
    BREAK           shift and go to state 11
    DO              shift and go to state 12
    LOCAL           shift and go to state 18
    DUALCOLON       shift and go to state 22
    WHILE           shift and go to state 24
    REPEAT          shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    NAME            shift and go to state 23
    LPAREN          shift and go to state 29

  ! BREAK           [ reduce using rule 6 (block -> command .) ]
  ! DO              [ reduce using rule 6 (block -> command .) ]
  ! LOCAL           [ reduce using rule 6 (block -> command .) ]
  ! DUALCOLON       [ reduce using rule 6 (block -> command .) ]
  ! WHILE           [ reduce using rule 6 (block -> command .) ]
  ! REPEAT          [ reduce using rule 6 (block -> command .) ]
  ! IF              [ reduce using rule 6 (block -> command .) ]
  ! FOR             [ reduce using rule 6 (block -> command .) ]
  ! RETURN          [ reduce using rule 6 (block -> command .) ]
  ! NAME            [ reduce using rule 6 (block -> command .) ]
  ! LPAREN          [ reduce using rule 6 (block -> command .) ]

    command                        shift and go to state 6
    block                          shift and go to state 31
    list_vars                      shift and go to state 8
    call_function                  shift and go to state 9
    rotulo                         shift and go to state 10
    struct_while                   shift and go to state 13
    struct_repeat                  shift and go to state 14
    if                             shift and go to state 15
    struct_for                     shift and go to state 16
    struct_for_in                  shift and go to state 17
    command_ret                    shift and go to state 19
    var                            shift and go to state 20
    prefix_exp                     shift and go to state 21

state 7

    (73) function -> FUNCTION . name_function body_function
    (74) name_function -> . NAME

    NAME            shift and go to state 33

    name_function                  shift and go to state 32

state 8

    (8) command -> list_vars . ATRIB list_exps

    ATRIB           shift and go to state 34


state 9

    (9) command -> call_function .

    BREAK           reduce using rule 9 (command -> call_function .)
    DO              reduce using rule 9 (command -> call_function .)
    LOCAL           reduce using rule 9 (command -> call_function .)
    DUALCOLON       reduce using rule 9 (command -> call_function .)
    WHILE           reduce using rule 9 (command -> call_function .)
    REPEAT          reduce using rule 9 (command -> call_function .)
    IF              reduce using rule 9 (command -> call_function .)
    FOR             reduce using rule 9 (command -> call_function .)
    RETURN          reduce using rule 9 (command -> call_function .)
    NAME            reduce using rule 9 (command -> call_function .)
    LPAREN          reduce using rule 9 (command -> call_function .)
    FUNCTION        reduce using rule 9 (command -> call_function .)
    $end            reduce using rule 9 (command -> call_function .)
    END             reduce using rule 9 (command -> call_function .)
    UNTIL           reduce using rule 9 (command -> call_function .)
    ELSEIF          reduce using rule 9 (command -> call_function .)
    ELSE            reduce using rule 9 (command -> call_function .)


state 10

    (10) command -> rotulo .

    BREAK           reduce using rule 10 (command -> rotulo .)
    DO              reduce using rule 10 (command -> rotulo .)
    LOCAL           reduce using rule 10 (command -> rotulo .)
    DUALCOLON       reduce using rule 10 (command -> rotulo .)
    WHILE           reduce using rule 10 (command -> rotulo .)
    REPEAT          reduce using rule 10 (command -> rotulo .)
    IF              reduce using rule 10 (command -> rotulo .)
    FOR             reduce using rule 10 (command -> rotulo .)
    RETURN          reduce using rule 10 (command -> rotulo .)
    NAME            reduce using rule 10 (command -> rotulo .)
    LPAREN          reduce using rule 10 (command -> rotulo .)
    FUNCTION        reduce using rule 10 (command -> rotulo .)
    $end            reduce using rule 10 (command -> rotulo .)
    END             reduce using rule 10 (command -> rotulo .)
    UNTIL           reduce using rule 10 (command -> rotulo .)
    ELSEIF          reduce using rule 10 (command -> rotulo .)
    ELSE            reduce using rule 10 (command -> rotulo .)


state 11

    (11) command -> BREAK .

    BREAK           reduce using rule 11 (command -> BREAK .)
    DO              reduce using rule 11 (command -> BREAK .)
    LOCAL           reduce using rule 11 (command -> BREAK .)
    DUALCOLON       reduce using rule 11 (command -> BREAK .)
    WHILE           reduce using rule 11 (command -> BREAK .)
    REPEAT          reduce using rule 11 (command -> BREAK .)
    IF              reduce using rule 11 (command -> BREAK .)
    FOR             reduce using rule 11 (command -> BREAK .)
    RETURN          reduce using rule 11 (command -> BREAK .)
    NAME            reduce using rule 11 (command -> BREAK .)
    LPAREN          reduce using rule 11 (command -> BREAK .)
    FUNCTION        reduce using rule 11 (command -> BREAK .)
    $end            reduce using rule 11 (command -> BREAK .)
    END             reduce using rule 11 (command -> BREAK .)
    UNTIL           reduce using rule 11 (command -> BREAK .)
    ELSEIF          reduce using rule 11 (command -> BREAK .)
    ELSE            reduce using rule 11 (command -> BREAK .)


state 12

    (12) command -> DO . block END
    (6) block -> . command
    (7) block -> . command block
    (8) command -> . list_vars ATRIB list_exps
    (9) command -> . call_function
    (10) command -> . rotulo
    (11) command -> . BREAK
    (12) command -> . DO block END
    (13) command -> . struct_while
    (14) command -> . struct_repeat
    (15) command -> . if
    (16) command -> . struct_for
    (17) command -> . struct_for_in
    (18) command -> . LOCAL list_vars ATRIB list_exps
    (19) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (65) call_function -> . prefix_exp args
    (23) rotulo -> . DUALCOLON NAME DUALCOLON
    (81) struct_while -> . WHILE exp DO block END
    (85) struct_repeat -> . REPEAT block UNTIL exp
    (75) if -> . IF exp THEN block elseif_list else_opt END
    (82) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (83) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (84) struct_for_in -> . FOR list_names IN list_exps DO block END
    (20) command_ret -> . RETURN SEMICOLON
    (21) command_ret -> . RETURN list_exps
    (22) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp COLCH exp RCOLCH
    (29) prefix_exp -> . NAME
    (30) prefix_exp -> . LPAREN exp RPAREN
    (31) prefix_exp -> . prefix_exp sufix_exp

    BREAK           shift and go to state 11
    DO              shift and go to state 12
    LOCAL           shift and go to state 18
    DUALCOLON       shift and go to state 22
    WHILE           shift and go to state 24
    REPEAT          shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    NAME            shift and go to state 23
    LPAREN          shift and go to state 29
